--- a/.github/workflows/contract_requiring_verification_published.yml
+++ b/.github/workflows/contract_requiring_verification_published.yml
@@ -8,7 +8,7 @@ on:
       - contract_requiring_verification_published
 
 env:
-  PACT_BROKER_BASE_URL: https://test.pactflow.io
+  PACT_BROKER_BASE_URL: https://organictraffic.pactflow.io
   PACT_BROKER_TOKEN: ${{ secrets.PACTFLOW_TOKEN_FOR_CI_CD_WORKSHOP }}
   PACT_BROKER_PUBLISH_VERIFICATION_RESULTS: true
   PACT_URL: ${{ github.event.client_payload.pact_url }}
@@ -25,7 +25,7 @@ jobs:
           ref: ${{env.GIT_COMMIT}}
       - uses: actions/setup-node@v2-beta
         with:
-          node-version: "12"
+          node-version: '12'
       - run: docker pull pactfoundation/pact-cli:latest
       - name: Install
         run: npm i
